--- a/app-of-apps.yaml
+++ b/app-of-apps.yaml
@@ -16,7 +16,10 @@ spec:
       targetRevision: main
       helm:
         valueFiles:
-        - "https://github.com/seranpol/app-value.git/operators-and-configs.yaml"
+        - "$valueRepo/operators-and-configs.yaml"
+    - repoURL: https://github.com/seranpol/app-value.git
+      ref: valueRepo
+      targetRevision: main
   syncPolicy:
     automated:
       selfHeal: true
