--- a/helm-charts/charts/config-test/templates/configmap.yaml
+++ b/helm-charts/charts/config-test/templates/configmap.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: debug-output
+  name: configmap-test
   namespace: openshift-gitops
 data:
   IsAlive: "yes !!"
