--- a/app-of-apps.yaml
+++ b/app-of-apps.yaml
@@ -18,21 +18,16 @@ spec:
         valueFiles:
         - "$valueRepo/bootstrap/operators-and-configs.yaml"
         parameters:
-        - name: enviroment
-          value: "dev"
         - name: globalAutomationRepoURL
           value: https://github.com/seranpol/app-auto.git
         - name: globalClusterRepoURL
-          value: "{{ valueRepo }}"
-        valuesObject:
-          global:
-            operator:
-              installPlanApproval: Automatic
+          value: "$valueRepo"
+
     - repoURL: https://github.com/seranpol/app-value.git
       ref: valueRepo
       targetRevision: main
 
-
+      
   syncPolicy:
     automated:
       selfHeal: true
