--- a/helm-charts/charts/config-test-1/templates/configmap.yaml
+++ b/helm-charts/charts/config-test-1/templates/configmap.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: configmap-test
+  name: configmap-test-1
   namespace: openshift-gitops
 data:
   IsAlive: {{.Values.data }}
