--- a/helm-charts/charts/argocd-app-of-apps/templates/clustergenerators.yaml
+++ b/helm-charts/charts/argocd-app-of-apps/templates/clustergenerators.yaml
@@ -26,7 +26,7 @@ spec:
         namespace: openshift-gitops
       source:
         repoURL: {{ $.Values.globalAutomationRepoURL }}
-        path: helm-charts/charts/argocd-app-of-apps
+        path: helm-charts/charts/argocd-app-of-apps/applications.yaml
         targetRevision: main        
         helm:
           valuesObject:
