--- a/helm-charts/charts/argocd-app-of-apps/templates/applications.yaml
+++ b/helm-charts/charts/argocd-app-of-apps/templates/applications.yaml
@@ -9,9 +9,9 @@ data:
 
 ---
 
-{{- if $.Values.applications }}
+#{{- if $.Values.applications }}
 {{- range $app := $.Values.applications }}
-
+{{- if hasKey $app "enabled" | ternary $app.enabled $.Values.default.app.enabled }}
 
 ---
 
@@ -116,6 +116,7 @@ spec:
   {{- end }}
 
 
+#{{- end }}
 {{- end }}
 {{- end }}
 
