--- a/helm-charts/charts/argocd-app-of-apps/templates/applications.yaml
+++ b/helm-charts/charts/argocd-app-of-apps/templates/applications.yaml
@@ -5,7 +5,11 @@ metadata:
   name: debug-output-from-app-of-apps
   namespace: openshift-gitops
 data:
-  IsAlive: {{ .Values.applications | count }}
+  alive: "hardcoded"
+  names: |-
+    {{- range .Values.applications }}
+    {{ .name }}
+    {{- end }}
 
 ---
 
