--- a/helm-charts/charts/argocd-app-of-apps/templates/applications.yaml
+++ b/helm-charts/charts/argocd-app-of-apps/templates/applications.yaml
@@ -1,15 +1,15 @@
 
-apiVersion: v1
-kind: ConfigMap
-metadata:
-  name: debug-output-from-app-of-apps
-  namespace: openshift-gitops
-data:
-  alive: "hardcoded"
-  names: |-
-    {{- range .Values.applications }}
-    {{ .name }}
-    {{- end }}
+# apiVersion: v1
+# kind: ConfigMap
+# metadata:
+#   name: debug-output-from-app-of-apps
+#   namespace: openshift-gitops
+# data:
+#   alive: "hardcoded"
+#   names: |-
+#     {{- range .Values.applications }}
+#     {{ .name }}
+#     {{- end }}
 
 ---
 
