--- a/helm-charts/charts/clustergen-test/templates/configmap.yaml
+++ b/helm-charts/charts/clustergen-test/templates/configmap.yaml
@@ -4,4 +4,4 @@ metadata:
   name: clustergen-test
   namespace: openshift-gitops
 data:
-  IsAlive: {{.Values.somevalues | len }}
+  IsAlive: {{.Values.somevalue }}
