--- a/helm-charts/charts/argocd-app-of-apps/templates/clustergenerators.yaml
+++ b/helm-charts/charts/argocd-app-of-apps/templates/clustergenerators.yaml
@@ -15,7 +15,7 @@ spec:
           matchLabels:
             enviroment: {{ $env }}
         values:
-          environment: {{ $env }}
+          environment: '{{ $env }}'
     {{- end }}
   template:
     metadata:
