--- a/helm-charts/charts/argocd-app-of-apps/templates/clustergenerators.yaml
+++ b/helm-charts/charts/argocd-app-of-apps/templates/clustergenerators.yaml
@@ -19,7 +19,8 @@ spec:
     {{- end }}
   template:
     metadata:
-      name: 'clustergenerator-{{ .values.environment }}'
+      #name: 'clustergenerator-{{ .values.environment }}'
+      name: 'clustergenerator-'
       namespace: {{ (.destination).namespace }}
     spec:    
       project: default
