--- a/helm-charts/charts/argocd-app-of-apps/templates/clustergenerators.yaml
+++ b/helm-charts/charts/argocd-app-of-apps/templates/clustergenerators.yaml
@@ -14,6 +14,8 @@ spec:
         selector:
           matchLabels:
             enviroment: {{ $env }}
+        values:
+          clusterEnvironment: {{ $env }}
     {{- end }}
   template:
     metadata:
