--- a/helm-charts/charts/argocd-app-of-apps/templates/clustergenerators.yaml
+++ b/helm-charts/charts/argocd-app-of-apps/templates/clustergenerators.yaml
@@ -14,7 +14,7 @@ spec:
         selector:
           matchLabels:
             enviroment: {{ $env }}
-        clusterValues:
+        values:
           clusterEnvironment: {{ $env }}
     {{- end }}
   template:
