--- a/helm-charts/charts/argocd-app-of-apps/templates/clustergenerators.yaml
+++ b/helm-charts/charts/argocd-app-of-apps/templates/clustergenerators.yaml
@@ -14,12 +14,10 @@ spec:
         selector:
           matchLabels:
             enviroment: {{ $env }}
-        values:
-          clusterEnvironment: {{ $env }}
     {{- end }}
   template:
     metadata:
-      name: clustergenerator-'{{values.clusterEnvironment}}''
+      name: foobar-{{ $i }}-{{ .name }}
       namespace: {{ (.destination).namespace }}
     spec:    
       project: default
