--- a/helm-charts/charts/argocd-app-of-apps/templates/clustergenerators.yaml
+++ b/helm-charts/charts/argocd-app-of-apps/templates/clustergenerators.yaml
@@ -19,7 +19,7 @@ spec:
     {{- end }}
   template:
     metadata:
-      name: clustergenerator-{{ $i }}-{{ .value.name}}
+      name: clustergenerator-{{ $i }}-{{ .values.clusterEnvironment}}
       namespace: {{ (.destination).namespace }}
     spec:    
       project: default
