--- a/helm-charts/charts/argocd-app-of-apps/templates/clustergenerators.yaml
+++ b/helm-charts/charts/argocd-app-of-apps/templates/clustergenerators.yaml
@@ -46,7 +46,7 @@ spec:
             - name: globalClusterRepoURL
               value: {{ $.Values.globalClusterRepoURL }}
             - name: clusterEnvironment
-              value: {{ .values.clusterEnvironment }}
+              value: {{ $.values.clusterEnvironment }}
             
 {{- end }}
 {{- end }}
