--- a/helm-charts/charts/argocd-app-of-apps/templates/clustergenerators.yaml
+++ b/helm-charts/charts/argocd-app-of-apps/templates/clustergenerators.yaml
@@ -45,8 +45,8 @@ spec:
               value: {{ $.Values.globalAutomationRepoURL }}
             - name: globalClusterRepoURL
               value: {{ $.Values.globalClusterRepoURL }}
-            - name: clusterEnvironment
-              value: {{ $.values.clusterEnvironment }}
+            # - name: clusterEnvironment
+            #   value: {{ $.values.clusterEnvironment }}
             
 {{- end }}
 {{- end }}
