--- a/helm-charts/charts/argocd-app-of-apps/templates/clustergenerators.yaml
+++ b/helm-charts/charts/argocd-app-of-apps/templates/clustergenerators.yaml
@@ -46,7 +46,7 @@ spec:
             - name: globalClusterRepoURL
               value: {{ $.Values.globalClusterRepoURL }}
             - name: test
-              value: {{ generators.clusters.values.clusterEnvironment }}
+              value: '{{ generators.clusters.values.clusterEnvironment }}''
 
             
 {{- end }}
