--- a/helm-charts/charts/argocd-app-of-apps/templates/clustergenerators.yaml
+++ b/helm-charts/charts/argocd-app-of-apps/templates/clustergenerators.yaml
@@ -46,8 +46,8 @@ spec:
               value: {{ $.Values.globalAutomationRepoURL }}
             - name: globalClusterRepoURL
               value: {{ $.Values.globalClusterRepoURL }}
-            - name: test
-              value: "{{`{{ .values.clusterEnvironment }}`}}"
+            # - name: test
+            #   value: "{{`{{ .values.clusterEnvironment }}`}}"
 
             
 {{- end }}
