--- a/helm-charts/charts/argocd-app-of-apps/templates/clustergenerators.yaml
+++ b/helm-charts/charts/argocd-app-of-apps/templates/clustergenerators.yaml
@@ -20,7 +20,7 @@ spec:
     {{- end }}
   template:
     metadata:
-      name: clustergenerator-{{ $i }}
+      name: {{.name}}-clustergenerator-{{ $i }}
       namespace: {{ (.destination).namespace }}
     spec:    
       project: default
