--- a/helm-charts/charts/argocd-app-of-apps/templates/clustergenerators.yaml
+++ b/helm-charts/charts/argocd-app-of-apps/templates/clustergenerators.yaml
@@ -23,7 +23,8 @@ spec:
       name: {{.name}}-clustergenerator-{{ $i }}
       namespace: {{ (.destination).namespace }}
     spec:    
-      project: generator-test-project
+      # project: generator-test-project
+      project: {{ .argoProject }}
       syncPolicy:
         automated:
           prune: true
