--- a/helm-charts/charts/argocd-app-of-apps/templates/clustergenerators.yaml
+++ b/helm-charts/charts/argocd-app-of-apps/templates/clustergenerators.yaml
@@ -24,7 +24,7 @@ spec:
       namespace: {{ (.destination).namespace }}
     spec:    
       # project: generator-test-project
-      project: {{ .argoProject }}
+      project: default
       syncPolicy:
         automated:
           prune: true
