--- a/helm-charts/charts/argocd-app-of-apps/values.yaml
+++ b/helm-charts/charts/argocd-app-of-apps/values.yaml
@@ -14,3 +14,7 @@ default:
         factor: 2
     annotations:
       argocd.argoproj.io/sync-options: ServerSideApply=true
+
+projects:
+
+applications:
