--- a/helm-charts/charts/argocd-app-of-apps/templates/applications.yaml
+++ b/helm-charts/charts/argocd-app-of-apps/templates/applications.yaml
@@ -26,9 +26,9 @@ metadata:
 {{- end }}
 spec:
   destination:
-    namespace: openshift-gitops
-    server: https://kubernetes.default.svc
-  project: default
+    namespace: {{ (.destination).namespace | default $.Values.default.app.destination.namespace | required (printf "No destination.namespace specified") }}
+    server: {{ (.destination).server | default $.Values.default.app.destination.server | required (printf "No destination.server specified") }}
+  project: {{ .project | default $.Values.default.app.project }}
   {{- if hasKey $app "enableAutoSync" | ternary $app.enableAutoSync $.Values.default.app.enableAutoSync }}
   syncPolicy:
     retry:
