--- a/helm-charts/charts/argocd-app-of-apps/templates/applications.yaml
+++ b/helm-charts/charts/argocd-app-of-apps/templates/applications.yaml
@@ -28,7 +28,7 @@ spec:
   destination:
     namespace: {{ (.destination).namespace | default $.Values.default.app.destination.namespace | required (printf "No destination.namespace specified") }}
     server: {{ (.destination).server | default $.Values.default.app.destination.server | required (printf "No destination.server specified") }}
-  project: {{ .project | default $.Values.default.app.project }}
+  project: default
   {{- if hasKey $app "enableAutoSync" | ternary $app.enableAutoSync $.Values.default.app.enableAutoSync }}
   syncPolicy:
     retry:
