--- a/helm-charts/charts/config-test-1/templates/configmap.yaml
+++ b/helm-charts/charts/config-test-1/templates/configmap.yaml
@@ -2,6 +2,6 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: configmap-test-1
-  namespace: openshift-gitops
+  namespace: hmo-test
 data:
   IsAlive: {{.Values.data }}
