--- a/helm-charts/charts/config-test-2/templates/configmap.yaml
+++ b/helm-charts/charts/config-test-2/templates/configmap.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: configmap-test-2
-  namespace: openshift-gitops
+  namespace: hmo-test
 data:
   IsAlive: {{.Values.data }}
   ThisIsNumberTwo: "yes it is"
