--- a/helm-charts/charts/argocd-app-of-apps/templates/applications.yaml
+++ b/helm-charts/charts/argocd-app-of-apps/templates/applications.yaml
@@ -27,7 +27,7 @@ metadata:
 spec:
   destination:
     namespace: {{ (.destination).namespace | default $.Values.default.app.destination.namespace | required (printf "No destination.namespace specified") }}
-    server: {{ (.destination).server | default $.Values.default.app.destination.server | required (printf "No destination.server specified") }}
+    server: 'https://kubernetes.default.svc'
   project: {{ .project | default $.Values.default.app.project }}
   {{- if hasKey $app "enableAutoSync" | ternary $app.enableAutoSync $.Values.default.app.enableAutoSync }}
   syncPolicy:
