--- a/helm-charts/charts/argocd-app-of-apps/templates/clustergenerators.yaml
+++ b/helm-charts/charts/argocd-app-of-apps/templates/clustergenerators.yaml
@@ -48,8 +48,8 @@ spec:
               value: {{ $.Values.globalAutomationRepoURL }}
             - name: globalClusterRepoURL
               value: {{ $.Values.globalClusterRepoURL }}
-            # - name: app
-            #   value: {{ $.Values.default.app }}
+            - name: app
+              value: {{ $.Values.default.app }}
 {{- end }}
 {{- end }}
 {{- end }}
