--- a/helm-charts/charts/argocd-app-of-apps/templates/clustergenerators.yaml
+++ b/helm-charts/charts/argocd-app-of-apps/templates/clustergenerators.yaml
@@ -8,6 +8,7 @@ metadata:
   name: {{ .name }}
   namespace: openshift-gitops
 spec:
+  project: default
   generators:
     {{- range $env := .environments }}
     - clusters:
