--- a/helm-charts/charts/argocd-app-of-apps/templates/clustergenerators.yaml
+++ b/helm-charts/charts/argocd-app-of-apps/templates/clustergenerators.yaml
@@ -39,8 +39,7 @@ spec:
         server: {{ (.destination).server | default $.Values.default.app.destination.server | required (printf "No destination.server specified") }}
 
         #namespace: openshift-gitops
-        # working here
-        namespace: {{.name}}
+        namespace: {{ (.destination).namespace | default $.Values.default.app.destination.namespace | required (printf "No destination.namespace specified") }}
 
       source:
         repoURL: {{ $.Values.globalAutomationRepoURL }}
