--- a/helm-charts/charts/argocd-app-of-apps/templates/clustergenerators.yaml
+++ b/helm-charts/charts/argocd-app-of-apps/templates/clustergenerators.yaml
@@ -27,7 +27,7 @@ spec:
       #namespace: {{ (.destination).namespace }}
     spec:    
       # project: generator-test-project
-      project: default
+      project: {{ .argoProject | default $.Values.default.app.project }}
       syncPolicy:
         automated:
           prune: true
