--- a/helm-charts/charts/argocd-app-of-apps/templates/clustergenerators.yaml
+++ b/helm-charts/charts/argocd-app-of-apps/templates/clustergenerators.yaml
@@ -26,8 +26,7 @@ spec:
       namespace: default
       #namespace: {{ (.destination).namespace }}
     spec:    
-      # project: generator-test-project
-      project: {{ .argoProject | default $.Values.default.app.project }}
+      project: {{ .project | default $.Values.default.app.project }}
       syncPolicy:
         automated:
           prune: true
