--- a/helm-charts/charts/argocd-app-of-apps/templates/clustergenerators.yaml
+++ b/helm-charts/charts/argocd-app-of-apps/templates/clustergenerators.yaml
@@ -37,8 +37,8 @@ spec:
         #name: 'in-cluster' - this works
         server: {{ (.destination).server | default $.Values.default.app.destination.server | required (printf "No destination.server specified") }}
 
-        namespace: openshift-gitops
-        #namespace: {{ (.destination).namespace | default $.Values.default.app.destination.namespace | required (printf "No destination.namespace specified") }}
+        #namespace: openshift-gitops
+        namespace: {{ (.destination).namespace | default $.Values.default.app.destination.namespace | required (printf "No destination.namespace specified") }}
 
       source:
         repoURL: {{ $.Values.globalAutomationRepoURL }}
