--- a/helm-charts/charts/clustergen-test/templates/configmap.yaml
+++ b/helm-charts/charts/clustergen-test/templates/configmap.yaml
@@ -2,6 +2,6 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: clustergen-test-{{.Values.somevalue}}
-  namespace: {{.namespaceName}}
+  namespace: {{.Values.namespaceName}}
 data:
   IsAlive: {{.Values.somevalue }}
