--- a/helm-charts/charts/argocd-app-of-apps/templates/clustergenerators.yaml
+++ b/helm-charts/charts/argocd-app-of-apps/templates/clustergenerators.yaml
@@ -23,8 +23,8 @@ spec:
   template:
     metadata:
       name: {{.name}}-clustergenerator-{{ $i }}
-      namespace: default
-      #namespace: {{ (.destination).namespace }}
+      #namespace: default
+      namespace: {{ (.destination).namespace }}
     spec:    
       project: {{ .project | default $.Values.default.app.project }}
       syncPolicy:
